ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:[your-account-id]:certificate/[cert-id]
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: echo-pod
    app.kubernetes.io/name: echo-pod
  name: echo-pod-ingress
spec:
  ingressClassName: my-alb-ing-class # or whatever ingress class name of ELB
  rules:
  - host: nayyaung.com # put your host name here
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-pod
            port:
              name: http
  tls:
  - hosts:
    - nayyaung.com # change it to  your hostname
